Test the resume with list identifiers